fix for spinner not showing on 4.2

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1108,6 +1108,7 @@ input.disabled-input {
 }
 .spinner.loading {
   display: inline;
+  visibility: visible;
 }
 .form-panel html {
   font-family: sans-serif;
